--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
+    <link href="./resources/css/style.css" type="text/css" role="stylesheet" />
   </head>
   <body>
+    <h1>Broadway Design</h1>
+    <nav>
+      <ul>
+        <li><a>Home</a></li>
+        <li><a>About</a></li>
+        <li><a>Work</a></li>
+        <li><a>Team</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </nav>
 
+    <h2>Our Process</h2>
+
+    <p><img alt="identify"></p>
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+    <p><img alt="understand"></p>
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <p><img alt="execute"></p>
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+    <h2>Designed in New York</h2>
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-Mail: test@example.com</p>
+    <p>Twitter: @test</p>
+    <footer>
+      <p>&copy; Broadway 2016
+         <a>Home</a> <a>About</a> <a>Work</a> <a>Team</a> <a>Contact</a>
+      </p>
+    </footer>
   </body>
 </html>
