--- a/index.html
+++ b/index.html
@@ -9,37 +9,48 @@
     <h1>Broadway Design</h1>
     <nav>
       <ul>
-        <li><a>Home</a></li>
-        <li><a>About</a></li>
-        <li><a>Work</a></li>
-        <li><a>Team</a></li>
-        <li><a>Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
-    <h2>Our Process</h2>
-
-    <p><img alt="identify"></p>
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
-    <p><img alt="understand"></p>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <p><img alt="execute"></p>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+    <section id="about">
+      <h2>Our Process</h2>
+      <p><img alt="identify"></p>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <p><img alt="understand"></p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <p><img alt="execute"></p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </section>
     <h2>Designed in New York</h2>
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-Mail: test@example.com</p>
-    <p>Twitter: @test</p>
+    <section id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </section>
+    <section id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </section>
+    <section id="Contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-Mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </section>
     <footer>
       <p>&copy; Broadway 2016
-         <a>Home</a> <a>About</a> <a>Work</a> <a>Team</a> <a>Contact</a>
+      <a href="./index.html">Home</a>
+      <a href="#about">About</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
       </p>
     </footer>
   </body>
