--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <section id="about">
       <h2>Our Process</h2>
-      <p><img alt="identify"></p>
+      <p><img src="./resources/images/identify.svg" alt="identify"></p>
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
-      <p><img alt="understand"></p>
+      <p><img src="./resources/images/understand.svg" alt="understand"></p>
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
-      <p><img alt="execute"></p>
+      <p><img src="./resources/images/execute.svg" alt="execute"></p>
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </section>
