--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <header>
+      <h1>Broadway Design</h1>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <section id="about">
       <h2>Our Process</h2>
@@ -29,7 +31,7 @@
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </section>
-    <h2>Designed in New York</h2>
+    <h2 class="middle">Designed in New York</h2>
     <section id="work">
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
