--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
       <p>Twitter: @test</p>
     </section>
     <footer>
-      <p>&copy; Broadway 2016
+      <span>&copy; Broadway 2016</span>
       <a href="./index.html">Home</a>
       <a href="#about">About</a>
       <a href="#work">Work</a>
       <a href="#team">Team</a>
       <a href="#contact">Contact</a>
-      </p>
     </footer>
   </body>
 </html>
